<resources>
    <string name="app_name">宅里</string>

    <string name="CustomToastMenuItem">自宝义Toast</string>
    <string name="title_activity_notification">通知测试</string>
    <string name="Notification_Text">开始下载</string>
    <string name="btn_Notification">通知开始</string>
    <string name="title_activity_custom_toast">CustomToast</string>

    <!--自定义Toast-->
    <string name="CustomToastHelloText">五种自定义Toast</string>
    <string name="CustomToastStyle1">默认</string>
    <string name="CustomToastStyle2">自定义显示位置</string>
    <string name="CustomToastStyle3">带图片</string>
    <string name="CustomToastStyle4">完全自定义</string>
    <string name="CustomToastStyle5">来自其它线程</string>

    <string name="login_text">登 录</string>
    <string name="other_text">其它选项</string>
    <string name="captcha_text">获取验证码</string>
    <string name="text_report">举 报</string>
    <string name="ModifyPass">修改密码</string>

    <string name="dialog_bottom_picture">拍照</string>
    <string name="dialog_bottom_import_from_local">从相册选择</string>
    <string name="share_dialog_cancel">取消</string>
    <string name="confirm">确 认</string>
    <string name="layout_dialog_loading">正在加载...</string>
    <string name="search">搜索</string>
    <string name="network_not_available">网络不可用</string>
    <string name="network_error">网络有问题</string>
    <string name="login_api_fail">登录请求接口失败</string>
    <string name="check_version">检查新版本失败</string>
    <string name="request_fail">请求失败</string>
    <string name="unknow_error">未知错误码</string>
    <string name="sync_userinfo_api_fail">同步用户信息接口请求失败</string>
    <string name="get_token_api_fail">获取token请求接口失败</string>
    <string name="phone_or_psw_error">手机或者密码错误</string>
    <string name="phone_number_be_null">手机号不能为空</string>
    <string name="password_be_null">密码不能为空</string>
    <string name="password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="captcha_cannot_be_null">验证码不能为空</string>
    <string name="protocol_not_checked">请同意用户协议</string>
    <string name="password_not_equal">两次密码输入不相同</string>
    <string name="download_success">下载完成</string>
    <string name="download_progress">正在下载:%1$d%%</string>
    <string name="no_record">暂无</string>
    <string name="no_read_message">...</string>
    <string name="clear_success">清楚成功</string>
    <string name="contact_notification_someone_agree_your_request">%1$s已同意你的好友请求</string>
    <string name="contact_notification_agree_your_request">对方已同意你的好友请求</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="register">用户注册</string>
    <string name="find_password">找回密码</string>
    <string name="txt_design">设计</string>
    <string name="txt_company">品牌合作</string>
    <string name="txt_art">工艺展示</string>
    <string name="txt_me">我的装修</string>
    <string name="add_new_address">增加新地址</string>
    <string name="str_pay">付款</string>
    <string name="str_buy">立即购买</string>
    <string name="str_add_shop_car">加入购物车</string>
</resources>
